--- a/code/package.json
+++ b/code/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "^7.0.0",
     "mocha": "^4.0.1",
     "nyc": "^14.0.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "sinon": "^7.3.2"
   }
 }
